<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/startSearch"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        android:title="@string/search_hint"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/sortList"
        android:icon="@drawable/ic_sort"
        android:orderInCategory="2"
        android:title="@string/sortList"
        app:showAsAction="ifRoom" />
</menu>